grammar.js
    source_file: $ => seq(
      optional($.shebang_line),
      repeat($.file_annotation),
      optional($.package_header),
      // In `.kt` files imports precede statements; Kotlin scripts (`.kts`, e.g.
      // Gradle build files) may place imports after statements, so allow import
      // lists and statements to interleave. The `[import_list]` conflict lets GLR
      // group runs of adjacent imports into a single import_list.
      repeat(choice(
        $.import_list,
        seq($._statement, $._semi)
      ))
    ),

    file_annotation: $ => seq(
      "@", "file", ":",
      choice(
        seq("[", repeat1($._unescaped_annotation), "]"),
        $._unescaped_annotation
      ),
      $._semi
    ),

    class_declaration: $ => prec.right(choice(
      seq(
        optional($.modifiers),
        choice("class", seq(optional("fun"), "interface")),
        alias($.simple_identifier, $.type_identifier),
        optional($.type_parameters),
        optional($.primary_constructor),
        optional(seq(":", $._delegation_specifiers)),
        optional($.type_constraints),
        optional($.class_body)
      ),
      seq(
        optional($.modifiers),
        "enum", "class",
        alias($.simple_identifier, $.type_identifier),
        optional($.type_parameters),
        optional($.primary_constructor),
        optional(seq(":", $._delegation_specifiers)),
        optional($.type_constraints),
        optional($.enum_class_body)
      )
    )),

    primary_constructor: $ => seq(
      optional(seq(optional($.modifiers), $._primary_constructor_keyword)),
      $._class_parameters
    ),

    // A leading `;` is an empty member (e.g. `class C : B() {; ... }`).
    class_body: $ => seq("{", optional($._semi), optional($._class_member_declarations), "}"),

    _class_parameters: $ => seq(
      "(",
      optional(sep1($.class_parameter, ",")),
      optional(","),
      ")"
    ),

    binding_pattern_kind: $ => choice("val", "var"),

    class_parameter: $ => seq(
      optional($.modifiers),
      optional($.binding_pattern_kind),
      $.simple_identifier,
      ":",
      $._type,
      optional(seq("=", $._expression))
    ),

    _delegation_specifiers: $ => prec.left(sep1(
      $.delegation_specifier,
      // $._annotated_delegation_specifier, // TODO: Annotations cause ambiguities with type modifiers
      ","
    )),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type,
      // The grammar doesn't explicitly define it, but parenthesized function
      // types seem to work!
      seq('(', $.function_type, ')'),
      seq("suspend", $.function_type)
    )),

    constructor_invocation: $ => seq($.user_type, $.value_arguments),

    // Annotation-scoped variant with prec(1) to resolve the shift/reduce
    // conflict at `user_type • (` — always shift (consume `(` as constructor
    // args). This matches Kotlin semantics where `(` after an annotation name
    // is always constructor arguments. Scoped here rather than on the shared
    // constructor_invocation to avoid changing delegation_specifier behavior.
    type_parameters: $ => seq("<", sep1($.type_parameter, ","), optional(","), ">"),

    type_parameter: $ => seq(
      optional($.type_parameter_modifiers),
      alias($.simple_identifier, $.type_identifier),
      optional(seq(":", $._type))
    ),

    _class_member_declarations: $ => repeat1(seq($._class_member_declaration, $._semi)),

    function_value_parameters: $ => seq(
      "(",
      optional(sep1($._function_value_parameter, ",")),
      optional(","),
      ")"
    ),

    _function_value_parameter: $ => seq(
      optional($.parameter_modifiers),
      $.parameter,
      optional(seq("=", $._expression))
    ),

    function_declaration: $ => prec.right(seq( // TODO
      optional($.context_receiver),
      optional($.modifiers),
      "fun",
      optional($.type_parameters),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      $.simple_identifier,
      $.function_value_parameters,
      optional(seq(":", $._type)),
      optional($.type_constraints),
      optional($.function_body)
    )),

    function_body: $ => choice($._block, seq("=", $._expression)),

    variable_declaration: $ => prec.left(PREC.VAR_DECL, seq(
      // repeat($.annotation), TODO
      $.simple_identifier,
      optional(seq(":", $._type))
    )),

    // Entry in name-based (parenthesized) destructuring — supports optional val/var and renaming.
    // No VAR_DECL precedence here: a bare `(x)` in a lambda must stay ambiguous
    // with a parenthesized expression so GLR can pick the reading that parses
    // (the trailing `->` decides). The `[_name_based_destructuring_entry,
    // _primary_expression]` conflict keeps both alive.
    property_declaration: $ => prec.right(seq(
      optional($.context_receiver),
      optional($.modifiers),
      $.binding_pattern_kind,
      optional($.type_parameters),
      optional(seq(field("receiver", $.receiver_type), optional('.'))),
      choice($.variable_declaration, $.multi_variable_declaration),
      optional($.type_constraints),
      optional(choice(
        seq("=", $._expression),
        $.property_delegate
      )),
      optional(';'),
      optional(choice(
        seq($.getter, optional($.setter)),
        seq($.setter, optional($.getter)),
      ))
    )),

    getter: $ => prec.right(seq(
      optional($.modifiers),
      "get",
      optional(seq(
        "(", ")",
        optional(seq(":", $._type)),
        $.function_body
      ))
    )),

    parameter: $ => seq($.simple_identifier, ":", $._type),

    object_declaration: $ => prec.right(seq(
      optional($.modifiers),
      "object",
      alias($.simple_identifier, $.type_identifier),
      optional(seq(":", $._delegation_specifiers)),
      optional($.class_body)
    )),

    secondary_constructor: $ => seq(
      optional($.modifiers),
      "constructor",
      $.function_value_parameters,
      optional(seq(":", $.constructor_delegation_call)),
      optional($._block)
    ),

    constructor_delegation_call: $ => seq(choice("this", "super"), $.value_arguments),

    // ==========
    // Enum classes
    // ==========

    enum_class_body: $ => seq(
      "{",
      optional($._enum_entries),
      optional(seq(";", optional($._class_member_declarations))),
      "}"
    ),

    _enum_entries: $ => seq(sep1($.enum_entry, ","), optional(",")),

    enum_entry: $ => seq(
      optional($.modifiers),
      $.simple_identifier,
      optional($.value_arguments),
      optional($.class_body)
    ),

    // ==========
    // Types
    // ==========

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.function_type,
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.not_nullable_type
      )
    ),

    _type_reference: $ => prec.left(1, choice(
      $.user_type,
      "dynamic"
    )),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1($.quest)
    ),

    user_type: $ => sep1($._simple_user_type, "."),

    _simple_user_type: $ => prec.right(PREC.SIMPLE_USER_TYPE, seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    )),

    type_projection: $ => choice(
      seq(optional($.type_projection_modifiers), $._type),
      "*"
    ),

    function_type: $ => seq(
      // Context parameters may prefix a function type: `context(C) () -> Unit`.
      optional($.context_receiver),
      optional(seq(field("receiver", $.receiver_type), ".")),
      $.function_type_parameters,
      "->",
      $._type
    ),

    // A higher-than-default precedence resolves the ambiguity with 'parenthesized_type'
    function_type_parameters: $ => prec.left(1, seq(
      "(",
      optional(seq(sep1(choice($.parameter, $._type), ","), optional(","))),
      ")"
    )),

    parenthesized_type: $ => seq("(", $._type, ")"),

    statements: $ => seq(
      $._statement,
      repeat(seq($._semi, $._statement)),
      optional($._semi),
    ),

    _statement: $ => choice(
      $._declaration,
      seq(
        repeat(choice($.label, alias($._statement_annotation, $.annotation))),
        choice(
          $.assignment,
          $._loop_statement,
          $._expression
        )
      )
    ),

    // Structurally identical to annotation, but a distinct rule so that
    // the parser state machine does not merge it with the annotation
    // reduction inside modifiers. Without this separation, modifiers
    // (PREC.MODIFIERS) always wins the reduce/reduce conflict and the
    // annotation-expression path is never explored, causing
    // @Annotation("args") (expr) to produce ERROR nodes.
    // Hidden (_) to keep it internal; aliased to $.annotation in _statement
    // so the CST uses a single "annotation" node name in all contexts,
    // matching PSI's unified ANNOTATION_ENTRY.
    control_structure_body: $ => choice($._block, $._statement),

    _block: $ => prec(PREC.BLOCK, seq("{", optional($.statements), "}")),

    for_statement: $ => prec.right(seq(
      "for",
      "(",
      repeat($.annotation),
      choice($.variable_declaration, $.multi_variable_declaration),
      "in",
      $._expression,
      ")",
      optional($.control_structure_body)
    )),

    _semi: $ => $._automatic_semicolon,

    _expression: $ => choice(
      $._unary_expression,
      $._binary_expression,
      $._primary_expression
    ),

    // Unary expressions

    call_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.call_suffix)),

    // Generic call expression: call with REQUIRED type_arguments.
    // prec.dynamic(1) tells GLR to prefer the generic-call interpretation
    // (f<T>(x)) over the comparison interpretation (f < T > (x)).
    // Separated from call_expression so the dynamic boost only applies
    // when type_arguments are actually parsed, not for all calls.
    navigation_expression: $ => prec.left(PREC.POSTFIX, seq($._expression, $.navigation_suffix)),

    prefix_expression: $ => choice(
      prec.right(PREC.PREFIX, seq($._prefix_unary_operator, $._expression)),
      prec.right(seq(choice($.annotation, $.label), $._expression)),
    ),

    as_expression: $ => prec.left(PREC.AS, seq($._expression, $._as_operator, $._type)),

    multiplicative_expression: $ => prec.left(PREC.MULTIPLICATIVE, seq($._expression, $._multiplicative_operator, $._expression)),

    additive_expression: $ => prec.left(PREC.ADDITIVE, seq($._expression, $._additive_operator, $._expression)),

    navigation_suffix: $ => seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional($.type_arguments),
      $._member_access_operator,
      choice(
        $.simple_identifier,
        $.parenthesized_expression,
        "class"
      )
    ),

    call_suffix: $ => prec.left(seq(
      // this introduces ambiguities with 'less than' for comparisons
      optional($.type_arguments),
      choice(
        prec(PREC.ARGUMENTS, seq(optional($.value_arguments), $.annotated_lambda)),
        $.value_arguments
      )
    )),

    // Call suffix with REQUIRED type_arguments (used by _generic_call_expression)
    annotated_lambda: $ => seq(
      repeat($.annotation),
      optional($.label),
      $.lambda_literal
    ),

    type_arguments: $ => seq("<", sep1($.type_projection, ","), optional(","), ">"),

    value_arguments: $ => seq(
      "(",
      optional(
        seq(
          sep1($.value_argument, ","),
          optional(","),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($.annotation),
      optional(seq($.simple_identifier, "=")),
      optional("*"),
      $._expression
    ),

    parenthesized_expression: $ => seq("(", $._expression, ")"),

    // https://kotlinlang.org/spec/syntax-and-grammar.html#grammar-rule-collectionLiteral
    collection_literal: $ => seq(
      "[",
      $._expression,
      repeat(seq(",", $._expression)),
      optional(","),
      "]"),

    string_literal: $ => seq(
      $._string_start,
      repeat(choice($.string_content, $._interpolation)),
      $._string_end,
    ),

    _interpolation: $ => choice(
      seq(alias($._interpolation_expression_start, $.interpolation_expression_start), alias($._expression, $.interpolated_expression), alias("}", $.interpolation_expression_end)),
      seq(alias($._interpolation_identifier_start, $.interpolation_identifier_start), alias($.simple_identifier, $.interpolated_identifier)),
    ),

    // A choice (not `optional(params ->)`) so GLR keeps both readings of a body
    // that opens with `(`: `{ (x)(args) }` (a parenthesized-expression statement)
    // and `{ (x) -> … }` (a destructuring parameter). The trailing `->` decides.
    lambda_literal: $ => prec(PREC.LAMBDA_LITERAL, choice(
      seq("{", optional($.statements), "}"),
      seq("{", optional($.lambda_parameters), "->", optional($.statements), "}")
    )),

    if_expression: $ => prec.right(seq(
      "if",
      "(", field('condition', $._expression), ")",
      choice(
        field('consequence', $.control_structure_body),
        seq(
          optional(field('consequence', $.control_structure_body)),
          optional(";"),
          "else",
          choice(field('alternative', $.control_structure_body), ";")
        ),
        ";"
      )
    )),

    jump_expression: $ => choice(
      prec.right(PREC.RETURN_OR_THROW, seq("throw", $._expression)),
      prec.right(PREC.RETURN_OR_THROW, seq(choice("return", $._return_at), optional($._expression))),
      "continue",
      $._continue_at,
      "break",
      $._break_at
    ),

    _additive_operator: $ => choice("+", "-"),

    _multiplicative_operator: $ => choice("*", "/", "%"),

    _as_operator: $ => choice("as", "as?"),

    _prefix_unary_operator: $ => choice("++", "--", "-", "+", "!"),

    _member_access_operator: $ => choice(".", "::", "?."),

    modifiers: $ => prec.right(
      repeat1(prec.right(PREC.MODIFIERS, choice($.annotation, $._modifier)))
    ),

    _modifier: $ => choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ),

    type_modifiers: $ => repeat1($._type_modifier),

    _type_modifier: $ => choice($.annotation, "suspend"),

    class_modifier: $ => choice(
      "sealed",
      "annotation",
      "data",
      "inner",
      "value",
    ),

    member_modifier: $ => choice(
      "override",
      "lateinit"
    ),

    visibility_modifier: $ => choice(
      "public",
      "private",
      "internal",
      "protected"
    ),

    function_modifier: $ => choice(
      "tailrec",
      "operator",
      "infix",
      "inline",
      "external",
      "suspend"
    ),

    inheritance_modifier: $ => choice(
      "abstract",
      "final",
      "open"
    ),

    annotation: $ => choice(
      $._single_annotation,
      $._multi_annotation
    ),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    use_site_target: $ => seq(
      choice("field", "property", "get", "set", "receiver", "param", "setparam", "delegate"),
      ":"
    ),

    _unescaped_annotation: $ => choice(
      alias($._annotation_constructor_invocation, $.constructor_invocation),
      $.user_type
    ),

    // ==========
    // Identifiers
    // ==========

    _return_at: $ => seq(
      "return@",
      alias($._lexical_identifier, $.label)
    ),

    _break_at: $ => seq(
      "break@",
      alias($._lexical_identifier, $.label)
    ),
