corpus/expressions.txt
==================
Multiplication expression
==================

45 * 3

---

(source_file (multiplicative_expression (integer_literal) (integer_literal)))

==================
Function calls
==================

print("Hello World!")
sum(1, 2)

---

(source_file
	(call_expression (simple_identifier)
		(call_suffix value_arguments: (value_arguments
			(value_argument expression: (line_string_literal)))))
	(call_expression (simple_identifier)
		(call_suffix value_arguments: (value_arguments
			(value_argument expression: (integer_literal))
			(value_argument expression: (integer_literal))))))
