corpus/functions.txt
==================
Top-level functions
==================

fun main() {}

---

(source_file
	(function_declaration
		identifier: (simple_identifier)
		parameters: (function_value_parameters)
		body: (function_body)))

==================
Generic functions
==================

<T> fun test() {}

---

(source_file
	(function_declaration
		(type_parameters (type_parameter (type_identifier)))
		identifier: (simple_identifier)
		parameters: (function_value_parameters)
		body: (function_body)))

==================
Functions with parameters
==================

fun main(args: Array<String>) {}

fun sum(a: Int, b: Int) = a + b

---

(source_file
	(function_declaration
		identifier: (simple_identifier)
		parameters: (function_value_parameters
		   (parameter identifier: (simple_identifier)
			(user_type
				identifier: (type_identifier)
				(type_arguments (type_projection (user_type identifier: (type_identifier))))))) body: (function_body))
	(function_declaration
		identifier: (simple_identifier)
		parameters: (function_value_parameters
            (parameter
                identifier: (simple_identifier)
                (user_type identifier: (type_identifier)))
                (parameter
                    identifier: (simple_identifier)
                    (user_type identifier: (type_identifier)))) body: (function_body
                    expression: (additive_expression
                            left: (simple_identifier)
                            right: (simple_identifier)))))

==================
Functions with return types
==================

fun answerToTheUltimateQuestionOfLifeTheUniverseAndEverything(): Int = 42

---

(source_file
	(function_declaration
		identifier: (simple_identifier)
		parameters: (function_value_parameters)
		(user_type identifier: (type_identifier))
		body: (function_body expression: (integer_literal))))
