corpus/source-files.txt
==================
File annotations
==================

@file:JvmName("HelloWorld")

val x = 4

---

(source_file
	(file_annotation
		(constructor_invocation
			(user_type identifier: (type_identifier))
			(value_arguments (value_argument expression: (line_string_literal)))))
	(property_declaration
		variable_declaration: (variable_declaration
                                identifier: (simple_identifier))
                                (integer_literal)))
