corpus/statements.txt
==================
For statements
==================

for (value in values) {}

---

(source_file
	(for_statement
		variable_declaration: (variable_declaration identifier: (simple_identifier))
		collection: (simple_identifier)
		control_structure_body: (control_structure_body)))
